--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 body {
   background-color: #333;
   font-family: sans-serif;
-  font-size: 10px;
+  font-size: 14px;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
 }
 
 .container {
@@ -14,8 +18,41 @@ nav {
   padding: 10px 0 15px 15px;
   position: fixed;
   width: 420px;
+  background-color: #000000;
 }
 
 .restaurant-list {
   padding-top: 50px;
+}
+
+h1 {
+  font-size: 130%;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 100%;
+  padding-top: 1%;
+}
+
+.location {
+  background-color: #dfdee0;
+  width: 100%;
+  padding: 5%;
+  margin: 0;
+  border-bottom: 1px solid #7c7c7c;
+  text-decoration:none;
+  position: relative;
+}
+
+.arrow {
+  display: inline;
+  float: right;
+  position: absolute;
+  top: 30%;
+  right: 20px;
+}
+
+.location:hover {
+  background-color: #afafaf;
 }
